2015-09-09  Oliver Lemke  <olemke@core-dump.info>

	* arts-2-3-300

	* Backported from arts-2.2. Adapted controlfiles.

	* controlfiles/classroom_exercises/:

	Added exercises. Controlfiles, matlab scripts and assignments provided
	by Theresa Lang.

	* doc/classroom_excercises_solutions:

	Added solutions for exercises. Provided by Theresa Lang.

	* doc/CMakeLists.txt: Added solutions subdir.

	* controlfiles/CMakeLists.txt:

	Add exercises as tests.

	Add custom target mkdir-arts-results as the exercises require an
	'results' folder to be present.

	* cmake/modules/ArtsBuildTexDoc.cmake:

	Add macro ARTS_ADD_SIMPLE_TEX_DOC. Used to compile exercise solutions.

	* CMakeLists.txt:

	Add exercises to check-xmldata. Also add special target check-classroom.

	Add mkdir-arts-results as a dependency for both targets.

2015-09-09  Oliver Lemke  <olemke@core-dump.info>

	* arts-2-3-299

	Warning: You have to adapt your controlfiles if you're using a custom
	iy_main_agenda that calls iyRadioLink, iyMC or iyLoopFrequencies.
	-> Add Ignore(diy_dx) to iy_main_agenda

	* src/agendas.cc, src/methods.cc:

	Jacobian calculations that relied on recursive calls of the
	iy_main_agenda didn't work since arts-2-3-279. diy_dx was defined as
	an output-only variable and only initialized on the first
	call of iy_main_agenda. In recursive calls the output variable is
	resetted by the workspace engine and hence empty.

	Fixed by adding diy_dx as input to all agendas and methods that can
	call iy_main_agenda recursively:

	iy_main_agenda, iy_space_agenda, iy_surface_agenda,
	iy_surface_sub_agenda[0-5].

	iyEmissionStandard, iyFOS, iySurfaceCallSubAgendaX, iySurfaceFastem,
	iySurfaceRtpropAgenda, iySurfaceRtpropCalc, iyTransmissionStandard.

	* controlfiles/general/agendas.arts:

	Ignore diy_dx in iy_main_agenda__ScattMC and iy_main_agenda__Radiolink.

	* controlfiles/artscomponents/transmission/TestTransmission.arts,
	controlfiles/artscomponents/radiolink/TestRadioOccultation.arts,