@@ -1,3 +1,14 @@
+2015-09-09  Patrick Eriksson  <patrick.eriksson@chalmers.se>
+
+	* arts-2-3-301
+
+	* src/m_oem.cc (x2arts_std): Start on a new WSM. So far commented out.
+
+	(get_gp_rq_to_atmgrids): As below, but working in reversed direction.
+
+	(get_gp_atmgrids_to_rq): New name of a function added in last
+	commit.
+
 2015-09-09  Oliver Lemke  <olemke@core-dump.info>
 
 	* arts-2-3-300
